crates/worker-macros/tests/reactor/sync-fail.stderr
error: reactor workers must be asynchronous
 --> tests/reactor/sync-fail.rs:4:4
  |
4 | fn Worker(_scope: ::ianaio-web-starter::worker::reactor::ReactorScope<(), ()>) {}
  |    ^^^^^^

