crates/worker-macros/tests/reactor/sync-fail.rs
#![no_implicit_prelude]

#[::ianaio-web-starter::worker::reactor::reactor]
fn Worker(_scope: ::ianaio-web-starter::worker::reactor::ReactorScope<(), ()>) {}

fn main() {}

